# brook_feeder

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: lib.rs
services/: README.md  feeder.service  feeder.timer
src/: lib.rs  main.rs
src/cli/: commands.rs
src/config/: mod.rs
src/domain/: article.rs  feed.rs  mod.rs  notification.rs
src/errors/: mod.rs
src/services/: feed_service.rs  fetch_service.rs  import_export_service.rs  mod.rs  notification_service.rs
src/sources/: blogger.rs  mastodon.rs  mod.rs  registry.rs  rss_atom.rs  traits.rs  wordpress.rs  youtube.rs
src/storage/: mod.rs  traits.rs
src/storage/sqlite/: article_cache_repository.rs  connection.rs  feed_repository.rs  mod.rs
tests/: cli_tests.rs
